# construct

./: IDEA.md  MCP.md  SPEC.md  dev.py  pyproject.toml
construct_server.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
data/: construct.db
demo/: generate-products.mjs  package-lock.json  package.json  products.json
demo/app/: layout.tsx  page.tsx
demo/app/novabuy/: layout.tsx  page.tsx
demo/app/shopmart/: layout.tsx  page.tsx
demo/components/: ThemeToggle.tsx
demo/lib/: products.ts  types.ts
extension/: package-lock.json  package.json  tsconfig.json  tsup.config.ts
extension/src/: config.ts  content-script.ts  popup.ts  service-worker.ts  types.ts
extension/static/: manifest.json  popup.css  popup.html
server/: README.md  __main__.py  browser_use.py  config.py  db.py  mcp_server.py  models.py  routes.py  services.py  workflow_md.py
spikes/: .gitignore  pyproject.toml  spike_1_generate.py  spike_2_schema.py  spike_3_extract.py  spike_4_timing.py
spikes/findings/: integration-guide.md  spike-1.md  spike-2.md  spike-3.md  spike-4.md
spikes/findings/workflows/: form-fill.json  multi-step.json  simple-nav.json
tasks/: build-plan.md  chrome_extension.md  demo_page.md  phase-1-spikes.md
web/: package-lock.json  package.json
web/app/: globals.css  layout.tsx  page.tsx
web/app/runs/[id]/: page.tsx
web/components/: confirm-dialog.tsx  key-value-table.tsx  navbar.tsx  providers.tsx  sop-card.tsx  sse-log-panel.tsx  status-badge.tsx  step-progress.tsx  workflow-badge.tsx
web/lib/: api.ts  hooks.ts  sse.ts  types.ts  utils.ts
(+19 files in other folders)
